objects/Management_Plan_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Interest__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Interest</label>
        <referenceTo>loc03__Easement_FeeTitle__c</referenceTo>
        <relationshipLabel>Management Plan Tracking</relationshipLabel>
        <relationshipName>Management_Plan_Tracking</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_Active_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Version?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tfn_Document_Link__c</fullName>
        <description>Bowerbird link to the management plan that is signed by all parties</description>
        <label>Document Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tfn_Draft_Follow_Up_Reminder__c</fullName>
        <formula>ADDMONTHS( tfn_Draft_MP_Sent_Date__c ,3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Draft Follow Up Reminder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tfn_Draft_MP_Sent_Date__c</fullName>
        <label>Draft MP Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tfn_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tfn_Final_Follow_Up_Reminder__c</fullName>
        <formula>ADDMONTHS( tfn_Final_MP_Sent_Date__c ,3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Follow Up Reminder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tfn_Final_MP_Sent_Date__c</fullName>
        <label>Final MP Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tfn_MP_Signed_No_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MP Signed (No Date)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tfn_Management_Plan_Signed_Date__c</fullName>
        <label>Management Plan Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tfn_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Management Plan Tracking</label>
    <nameField>
        <displayFormat>MP{0000}</displayFormat>
        <label>Management Plan Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Management Plan Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>